# dsc2025-vihallu-assignment

./: .gitignore  README.md  basic_classifier.ipynb  basic_classifier_v1.ipynb  pyproject.toml  requirements.txt
scripts/: benchmark_transformers.py  predict.py  preprocess.py  run_semantic_entropy.py  train_classical.py  train_hybrid.py  train_transformer.py
src/vihallu/: __init__.py  config.py  data.py  features.py  metrics.py
src/vihallu/models/: __init__.py  advanced.py  classical.py  hybrid.py  transformer.py
src/vihallu/utils/: __init__.py  io_utils.py  text_utils.py
