[build system]
require = ["setuptools>=67","wheel"]
build-backend="setuptools.build_meta"

[project]
name="vihallu-challenge-framework"
version="0.1.0"
description = "Collaborative framework for DSC2025 ViHallu hallucination detection"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {""="src"}

[tool.setuptools.packages.find]
where = ["src"]
